# cypher-shell

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: container-release.yml  release.yml
configs/: movies.yaml
cypher_shell/: __main__.py  agent.py  memory.py  query_runner.py  utils.py
cypher_shell/prompts/: cypher.py
